Make host ip address available in container via host.docker.internal

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,3 +6,5 @@ services:
     volumes:
       - ./docker/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
       - ./docker/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
+    extra_hosts:
+      host.docker.internal: host-gateway
